adiciona tipo do pokemon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div class="card">
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/1.png" class="rounded mx-auto d-block" id="pokemon-img" alt="...">
         <div class="card-body m-auto">
-          <h5 class="card-title" id="pokemon-name">Bulbasaur</h5>
+          <h5 class="card-title text-center" id="pokemon-name">Bulbasaur</h5>
+          <p class="pokemon-type card-text text-center"></p>
         </div>
       </div>
     </div>
